--- a/src/styles.css
+++ b/src/styles.css
@@ -9,13 +9,13 @@ body {
   color: white;
 }
 
-img {
-  width: 100%;
-  height: 60%;
+/* img {
+  min-width: 100%;
+  min-height: 100%;
   object-fit: cover;
   display: block;
   border-radius: 12px;
-}
+} */
 
 nav {
   display: flex;
