--- a/src/styles.css
+++ b/src/styles.css
@@ -22,11 +22,29 @@
 } */
 
 nav {
-  display: flex;
-  justify-content: center;
   padding: 18px;
-  gap: 26px;
   background-color: green;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.logo {
+  grid-column: 1 / 2;
+  align-self: center;
+  padding: 18px;
+  font-size: 3rem;
+  color: white;
+  font-weight: bold;
+  text-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+}
+
+.nav-buttons {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-column: 3 / 4;
+  gap: 18px;
+  align-self: center;
+  justify-items: end;
 }
 
 button {
@@ -50,8 +68,25 @@ button:hover {
 .home-page {
   display: flex;
   gap: 180px;
+  flex-direction: column;
   justify-content: center;
   font-size: 2rem;
+}
+
+.headline {
+  display: flex;
+  flex: wrap;
+  font-size: 120px;
+  margin: auto;
+  color: red;
+}
+
+.sub-headline {
+  display: flex;
+  flex: wrap;
+  font-size: 75px;
+  align-self: center;
+  color: green;
 }
 
 .about,
